<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/team_a_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/team_a_name"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/score_a_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/initial_score"
                android:textColor="@android:color/black"
                android:textSize="56sp" />

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="24dp"
                android:elevation="4dp"
                android:layout_marginRight="24dp"
                android:background="@color/buttonColor"
                android:onClick="threePointsA"
                android:text="@string/three_points" />

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="24dp"
                android:elevation="4dp"
                android:layout_marginRight="24dp"
                android:background="@color/buttonColor"
                android:onClick="twoPointsA"
                android:text="@string/two_points" />

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:elevation="4dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/buttonColor"
                android:onClick="onePointA"
                android:text="@string/one_point" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/team_b_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/team_b_name"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/score_b_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/initial_score"
                android:textColor="@android:color/black"
                android:textSize="56sp" />

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:elevation="4dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/buttonColor"
                android:onClick="threePointsB"
                android:text="@string/three_points" />

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:elevation="4dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/buttonColor"
                android:onClick="twoPointsB"
                android:text="@string/two_points" />

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:elevation="4dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/buttonColor"
                android:onClick="onePointB"
                android:text="@string/one_point" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset_id"
        android:layout_width="120dp"
        android:elevation="4dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:background="@color/buttonColor"
        android:onClick="resetButton"
        android:bottomRightRadius="10dp"
        android:bottomLeftRadius="10dp"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        android:text="@string/reset_text" />

</RelativeLayout>